2006-06-01  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* nnweb.el (nnweb-google-parse-1): Update regexp for author and date.

2006-05-30  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (directory-files-and-attributes): Move all the way
	forward (the third and final move).
	(gnus-agent-read-agentview): Trap reconstruction errors due to
	nonexistant directory.  Handle by returning nil.

2006-05-30  Didier Verna  <didier@xemacs.org>

	* message.el (message-dont-reply-to-names): Update the custom type.
	* message.el (message-dont-reply-to-names): New defsubst: potentially
	convert a list of regexps into a single one.
	* message.el (message-get-reply-headers): Use it.
	* nnmail.el (nnmail-fancy-expiry-target): Ditto.

2006-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-agent.el (directory-files-and-attributes): Move forward.

2006-05-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-ml.el (gnus-mailing-list-subscribe)
	(gnus-mailing-list-unsubscribe, gnus-mailing-list-owner)
	(gnus-mailing-list-message): Fix doc strings.

2006-05-29  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus-ml.el (gnus-mailing-list-message): Use gnus-url-mailto instead
	of doing it manually.

2006-05-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-toggle-truncate-lines): Fix typo in
	comment.

2006-05-29  Kevin Greiner  <kevin.greiner@compsol.cc>

	* gnus-agent.el (Added gnus-agent-flush*) to purge agent info.
	(gnus-agent-read-agentview): Fixed handling of end-of-file error.
	(gnus-agent-read-local): All symbols allocated in my-obarray
	(gnus-agent-set-local): Skip invalid entries (min and/or max is nil).
	(gnus-agent-regenerate-group): Check numeric names to see if they are
	messages or groups.
	(gnus-agent-total-fetched-for): Ignore 'dummy.group' (there should be a
	better way of do this...)

	* gnus-cache.el (gnus-agent-total-fetched-for): Ignore
	'dummy.group' (there should be a better way of do this...)
