@@ -18,10 +18,10 @@
 	       replace-regexp-in-string rmail-msg-is-pruned
 	       rmail-msg-restore-non-pruned-header sort-coding-systems
 	       tool-bar-add-item tool-bar-add-item-from-menu
-	       tool-bar-local-item-from-menu url-generic-parse-url
-	       url-http-file-exists-p url-insert-file-contents
-	       vcard-pretty-print w32-focus-frame w3m-detect-meta-charset
-	       w3m-region x-focus-frame))
+	       tool-bar-local-item-from-menu unicode-precedence-list
+	       url-generic-parse-url url-http-file-exists-p
+	       url-insert-file-contents vcard-pretty-print w32-focus-frame
+	       w3m-detect-meta-charset w3m-region x-focus-frame))
 (maybe-bind '(eudc-protocol
 	      filladapt-mode rmail-insert-mime-forwarded-message-function
 	      w3-meta-charset-content-type-regexp
